<resources>
    <string name="add_appbar_title">Add\nQuestion</string>
    <string name="add_input_answer">Input the answer</string>
    <string name="add_input_question">Input the question name</string>
    <string name="app_name">Daily Test</string>
    <string name="ascending">Ascending</string>
    <string name="calendar_appbar_title">Test Record</string>
    <string name="calendar_detail_button">Detail</string>
    <string name="calendar_friday">Fri</string>
    <string name="calendar_item_today">Today</string>
    <string name="calendar_monday">Mon</string>
    <string name="calendar_saturday">Sat</string>
    <string name="calendar_start_day">Start Day</string>
    <string name="calendar_sunday">Sun</string>
    <string name="calendar_thursday">Thur</string>
    <string name="calendar_tuesday">Tue</string>
    <string name="calendar_wednesday">Wed</string>
    <string name="calendar_year">%d</string>
    <string name="cancel">Cancel</string>
    <string name="chart_desc_entire">[Achievement Stages]</string>
    <string name="chart_desc_today">[Challenge Stages]</string>
    <string name="close">Close</string>
    <string name="confirmation">Confirmation</string>
    <string name="dashboard_entire_btn1">Entire List</string>
    <string name="dashboard_entire_btn2">Test Record</string>
    <string name="dashboard_entire_card1">Questions</string>
    <string name="dashboard_entire_card2">Test Complete</string>
    <string name="dashboard_entire_card3">Daily Create</string>
    <string name="dashboard_today_btn1">Go Test</string>
    <string name="dashboard_today_btn2">Test Result</string>
    <string name="dashboard_today_card1">Questions</string>
    <string name="dashboard_today_card2">Status</string>
    <string name="dashboard_today_card3">Correct</string>
    <string name="delete">Delete</string>
    <string name="descending">Descending</string>
    <string name="done">Done</string>
    <string name="entire_alert_sort1">Stage</string>
    <string name="entire_alert_sort2">Question</string>
    <string name="entire_alert_sort3">Registration Date</string>
    <string name="entire_alert_title">List Item Sort</string>
    <string name="entire_appbar_title">Entire Question List</string>
    <string name="entire_question">Entire Question</string>
    <string name="entire_search_msg">Please input search word</string>
    <string name="main_toast_oneMore_back">Please click BACK again to exit</string>
    <string name="menu_add_save">Save</string>
    <string name="menu_entire_align_qst">Question</string>
    <string name="menu_entire_align_regi">Registration</string>
    <string name="menu_entire_align_stage">Stage</string>
    <string name="menu_main_search">Question Search</string>
    <string name="menu_main_write">Question Write</string>
    <string name="menu_qst_edit">Edit</string>
    <string name="menu_search">Search</string>
    <string name="menu_sort">Sort</string>
    <string name="next">Next</string>
    <string name="no_item_layout_entire1">Please create a question.</string>
    <string name="no_item_layout_entire2">Please click on the creation icon at the top.</string>
    <string name="no_item_layout_today1">There are no test today.</string>
    <string name="no_item_layout_today2">The questions you create today are not added to today\'s test.\nOr there might be no tests because of the test cycle.</string>
    <string name="no_item_msg">Has No Item</string>
    <string name="nothing_sort_msg">There\'s nothing to sort.</string>
    <string name="order">Order</string>
    <string name="qst_appbar_title">Question Detail</string>
    <string name="qst_delete_msg">Delete the question?</string>
    <string name="qst_record_title">Test Record</string>
    <string name="qst_title_nextDate">Next Test Date</string>
    <string name="qst_title_registration">Registration Date</string>
    <string name="qst_title_stage">Current Stage</string>
    <string name="result_alert_sort1">Challenge Stage</string>
    <string name="result_alert_sort2">Question</string>
    <string name="result_alert_sort3">Test Result</string>
    <string name="result_appbar_title">Test Result</string>
    <string name="result_info_format">%d Questions / Completion %.1f%% / Correct %.1f%%</string>
    <string name="result_info_format_land">%d Questions\n\n\nCompletion %.1f%%\n\n\nCorrect %.1f%%</string>
    <string name="skip">Skip</string>
    <string name="sort_by">Sort By</string>
    <string name="start">Start</string>
    <string name="only_first_additional_text">Just remember two things!!\nCreate Question!\nIf you have today\'s test presented, solve them!</string>
    <string name="only_first_pager_main1">\"If memorize it difficult, it\'s hard to forget\"</string>
    <string name="only_first_pager_main2">1. Improved meta-cognition</string>
    <string name="only_first_pager_main3">2. Utilize withdrawal effect</string>
    <string name="only_first_pager_main4">3. Long-term memory</string>
    <string name="only_first_pager_sub1">The best way to memorize difficulty is to take a test.\n\nClick Next to check effect of a test.</string>
    <string name="only_first_pager_sub2">Meta-cognition is what I know and what I don\'t know.\n\nThere are many times when I can\'t think of what I think I know.</string>
    <string name="only_first_pager_sub3">The way you input information into your brain is easy, so it\'s quickly forgotten.\n(Listening to a lecture, reading, etc.)\n\nTests are a way to extract information from the brain.</string>
    <string name="only_first_pager_sub4">This app helps you repeat the test, giving you time to forget things you memorized.\n\nRepeating the test at adequate test cycle is very helpful for long-term memory.</string>
    <string name="status_msg_complete">Completion</string>
    <string name="status_msg_no_start">No Start</string>
    <string name="status_msg_no_test">No Test</string>
    <string name="status_msg_ongoing">Ongoing</string>
    <string name="test_appbar_title">Today\'s Test</string>
    <string name="test_correct">Correct</string>
    <string name="test_dormant_appbar_title">Dormant Question</string>
    <string name="test_dormant_initialize_msg">All dormant questions below stage 1 have been initialized.</string>
    <string name="test_dormant_snackbar_msg">Please test to clear dormant.\nCorrect keeps stage, and wrong drops stage.</string>
    <string name="test_go">Go Test</string>
    <string name="test_incorrect">Incorrect</string>
    <string name="test_result">Test Result</string>
    <string name="test_title_answer">&lt;Answer&gt;</string>
    <string name="test_title_question">&lt;Question&gt;</string>
    <string name="toast_duplication_qst">The same question exists.</string>
    <string name="toast_need_input_qst">Please input question and answer.</string>
    <string name="today_test">Today\'s Test</string>
    <string name="tutorial_create_1">Creating question is part of memorizing!\nSo you don\'t take tests on the day you create the questions!</string>
    <string name="tutorial_create_2">The better you create the question, the better it is for memorization.</string>
    <string name="tutorial_create_3">Oh, it can be difficult to create too many questions a day because tests accumulate.\nCreate as much as you can.</string>
    <string name="tutorial_entire_1">Each question has a stage of 0 &#8211; 6\nand can be achieved by passing the test!</string>
    <string name="tutorial_entire_2">If you achieve stage 6, you can say that you stored in long-term memory.</string>
    <string name="tutorial_entire_stage_icon">Example Achievement Stage</string>
    <string name="tutorial_entire_stage_desc">- Outside circumference : Check stage by number of colored\n\n- Inside Number : Test Cycle\n\n- Description : This question is achieved in stage 4 by passing the test after 7 days</string>
    <string name="tutorial_test_1">Hold on to seeing the answer as long as long as you can!</string>
    <string name="tutorial_test_2">You will grow in the process of squeezing memories out of your head.\nSet your own minimum time to check the answers to questions you don\'t know!</string>
    <string name="tutorial_test_3">You can check the answer by clicking on the question card.</string>
    <string-array name="calendar_month">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEPT</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>
    <plurals name="notification_text">
        <item quantity="one">There is a question that hasn\'t been solved yet.</item>
        <item quantity="other">There is %d questions that haven\'t been solved yet.</item>
    </plurals>
    <string name="tutorial_today_1">If you get the right answer, achieve the challenge stage and can try the next stage.</string>
    <string name="tutorial_today_2">Even if you may be wrong until stage 2, can achieve the challenge stage.</string>
    <string name="tutorial_today_stage_icon">Example Challenge Stage</string>
    <string name="tutorial_today_stage_desc">- Description : You are Challenging the test after 7 days. And if you get the right answer, you achieve stage 4.</string>
    <string name="tutorial_create_4">Please avoid creating questions\nat 11:58 P.M. - 12:03 A.M. (For Daily Update)</string>
    <string name="ad_mob_app_id" translatable="false">ca-app-pub-9569532653801871~3125640760</string>
    <string name="dormant">Dormant</string>
    <string name="update_cancel">Update is canceled.</string>
</resources>
