<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View"/>
        <variable
            name="currentIdx"
            type="Integer" />
        <variable
            name="activity"
            type="kr.yangbob.memorization.view.OnlyFirstActivity" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent"
        tools:context=".view.OnlyFirstActivity">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/startViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottomBar"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/delimiter_top_white"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_only_first_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/skip"
                android:onClick="@{() -> activity.clickSkip()}"
                android:visibility="@{currentIdx == 3 ? View.GONE : View.VISIBLE}"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_only_first_index_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_only_first_index_2"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:onlyFirstIndexImage="@{currentIdx == 0}"/>

            <ImageView
                android:id="@+id/iv_only_first_index_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_only_first_index_3"
                app:layout_constraintStart_toEndOf="@id/iv_only_first_index_1"
                app:layout_constraintTop_toTopOf="parent"
                app:onlyFirstIndexImage="@{currentIdx == 1}" />

            <ImageView
                android:id="@+id/iv_only_first_index_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_only_first_index_4"
                app:layout_constraintStart_toEndOf="@id/iv_only_first_index_2"
                app:layout_constraintTop_toTopOf="parent"
                app:onlyFirstIndexImage="@{currentIdx == 2}" />

            <ImageView
                android:id="@+id/iv_only_first_index_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_only_first_index_3"
                app:layout_constraintTop_toTopOf="parent"
                app:onlyFirstIndexImage="@{currentIdx == 3}" />

            <TextView
                android:id="@+id/tv_only_first_next_or_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:onClick="@{() -> activity.clickNextOrStart(currentIdx)}"
                android:text="@{currentIdx == 3 ? @string/start : @string/next}"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
