<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="index"
            type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/iv_only_first_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@id/tv_only_first_pager_main"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".5"
            app:onlyFirstPagerImage="@{index}"
            tools:src="@drawable/ic_start_test" />

        <TextView
            android:id="@+id/tv_only_first_pager_main"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="@dimen/big_emphasis_text"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:onlyFirstPagerMainText="@{index}"
            tools:text='"어렵게 외우면 잊기 어렵다."' />

        <TextView
            android:id="@+id/tv_only_first_pager_additional"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/only_first_additional_text"
            android:visibility="@{index == 0 ? View.VISIBLE : View.GONE}"
            app:autoSizeMaxTextSize="@dimen/emphasis_text"
            app:layout_constraintBottom_toTopOf="@id/tv_only_first_pager_sub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_only_first_pager_main" />

        <TextView
            android:id="@+id/tv_only_first_pager_sub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_only_first_pager_additional"
            app:onlyFirstPagerSubText="@{index}"
            tools:text="다음을 눌러서 시험의 효과를 확인해보세요. sdfsdsdfsdffdsfsdfsdf" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
